...
            ZStack(alignment: .topLeading) {
                HStack {
                    if chatViewModel.uiState == .input {
                        Image(systemName: "sparkles")
                            .font(.title2)
                            .foregroundColor(.accentColor)
                        InputView(textFieldText: "Type to Nudge")
                    }
                    else if chatViewModel.uiState == .thinking {
                       // TODO: Add a thinking loop here. Probably my LoadingView
                        InputView(textFieldText: "Press Esc to cancel")
                    } else {
                        InputView(textFieldText: "Respond to Nudge..")
                    }
                }
                .padding(.horizontal, 16)
                .padding(.vertical, 12)
...
